Fix TransferStep Common Config Parsing